--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,4 @@
-// @import "base";
+@import "base";
 // You need the base only when you are not using bootstrap. In that case, go to _base.scss
 // to customize it as you may want.
 
@@ -7,6 +7,301 @@
 
 // Write your sass code here or import partials
 
-h1 {
-  color: tomato;
+:root {
+  --blue: #A6D8D4;
+  --green: #8EAF9D;
+
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  // border: 1px solid black;
+  margin-bottom: 4rem;
+  padding: 0 15vw;
+
+  div {
+    img {
+      width: 100px;
+      margin-left: -1.8rem;
+    }
+  }
+
+  div {
+    a {
+      text-decoration: none;
+      border: 2px solid var(--green);
+      border-radius: 20px;
+      padding: 10px;
+      background: none;
+      color: var(--green);
+      font-weight: 600;
+      transition: 0.2s ease-in-out;
+    }
+
+    a:hover {
+      background-color: var(--green);
+      color: white;
+      transition: 0.2s ease-in-out;
+    }
+  }
+}
+
+.avatar {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  padding: 0 15vw;
+  height: auto;
+  
+    h1 {
+      font-size: 3rem;
+      font-weight: bold;
+      margin-bottom: 2rem;
+
+      @media screen and (max-width: 768px) {
+        font-size: 1.8rem;
+      }
+    }
+
+    h3 {
+      font-size: 1.6rem;
+      margin-bottom: 2rem;
+      font-weight: 300;
+
+      @media screen and (max-width: 768px) {
+        font-size: 1.4rem;
+      }
+    }
+
+    img:nth-of-type(1) {
+      width: 200px;
+      
+      @media screen and (max-width: 768px) {
+        width: 150px;
+      }
+    }
+
+    img:nth-of-type(2) {
+      width: 30rem;
+      margin-top: 4rem;
+      margin-bottom: -3rem;
+      z-index: 99;
+      
+      @media screen and (max-width: 768px) {
+        width: 80%;
+        margin-top: 1rem;
+        margin-bottom: -3rem;
+      }
+    }
+}
+
+.about {
+  background-color: var(--green);
+  padding: 8rem 25vw 10rem;
+  height: auto;
+  text-align: center;
+  margin-bottom: 25rem;
+
+  position: relative;
+
+  @media screen and (max-width: 768px) {
+    padding: 6rem 5vw 20rem;
+  }
+
+  .text {
+
+    h3 {
+      margin-bottom: 2rem;
+
+      @media screen and (max-width: 768px) {
+        font-size: 1.6rem;
+      }
+    }
+
+    p {
+      font-size: 1.3rem;
+      margin-bottom: 5rem;
+    }
+
+    @media screen and (max-width: 768px) {
+      
+    }
+  }
+
+  .wrapper {
+    display: flex;
+    justify-content: center;
+    width: 50vw;
+    border: 1px solid lightgray;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    border-radius: 15px;
+    background-color: white;
+
+    position: absolute;
+    
+
+
+    @media screen and (max-width: 768px) {
+      display: flex;
+      flex-direction: column;
+      width: 85vw;
+      margin-left: 1vw;
+    }
+    div {
+      
+      h2 {
+        margin-bottom: 1rem;
+      }
+
+      h4 {
+        margin-bottom: 1rem;
+      }
+
+    }
+
+    .card_one {
+      width: 25vw;
+      padding: 2rem;
+      
+      border-right: 1px solid lightgray;
+
+      @media screen and (max-width: 768px) {
+        width: 85vw;
+        border-right: none;
+        border-bottom: 1px solid lightgray;
+      }
+
+
+        div:nth-of-type(1) {
+          i {
+            background-color: var(--blue);
+            font-size: 1.8rem;
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            text-align: center;
+            line-height: 60px;
+            vertical-align: middle;
+            margin-bottom: 2rem;
+          }
+
+          margin-bottom: 2rem;
+
+        }
+
+        div:nth-of-type(2) {
+          p {
+            line-height: 0.5rem;
+          }
+        }
+        
+    }
+
+    .card_two {
+      width: 25vw;
+      padding: 2rem;
+     
+      @media screen and (max-width: 768px) {
+        width: 85vw;
+        border-right: none;
+      }
+
+      div:nth-of-type(1) {
+          i {
+            background-color: var(--blue);
+            font-size: 1.8rem;
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            text-align: center;
+            line-height: 60px;
+            vertical-align: middle;
+            margin-bottom: 2rem;
+            
+          }
+
+          margin-bottom: 3.6rem;
+        }
+    }
+  }
+}
+
+.examples {
+
+  padding: 0 10vw;
+
+  div:nth-of-type(1) {
+    text-align: center;
+    margin-bottom: 4rem;
+  }
+
+  .project_wrapper {
+    display: flex;
+    justify-content: space-around;
+
+    div:nth-of-type(1) {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      border: 1px solid black;
+      height: 15rem;
+      width: 30%;
+
+      background: url(../images/website_logo.png) center no-repeat;
+      background-size: 80%;
+      background-color: var(--blue);
+
+      h4, a {
+        opacity: 0;
+      }
+
+    }
+
+    div:nth-of-type(2) {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      border: 1px solid black;
+      height: 15rem;
+      width: 30%;
+
+      background: url(../images/bootstrap.png) center no-repeat;
+      background-size: 100%;
+
+      h4, a {
+        opacity: 0;
+      }
+    }
+
+    div:nth-of-type(3) {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      border: 1px solid black;
+      height: 15rem;
+      width: 30%;
+
+      background: url(../images/grid.jpg) center no-repeat;
+      background-size: 100%;
+
+      h4, a {
+        opacity: 0;
+      }
+    
+    }
+  }
+}
+
+footer {
+  grid-area: footer;
 }
