added proper links to github repositories of projets

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -295,6 +295,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        gap: 1rem;
         height: 100%;
         width: 100%;
         background-color:#8eaf9def;
@@ -355,14 +356,12 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        gap: 1rem;
         height: 100%;
         width: 100%;
         background-color:#8eaf9def;
         opacity: 0;
         transition: .5s ease;
-
-        
-
         
         a {
           letter-spacing: 1.8px;
@@ -413,6 +412,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        gap: 1rem;
         height: 100%;
         width: 100%;
         background-color:#8eaf9def;
